# haskell

./: .gitignore
BeginningHaskell/chapter2/: chapter2.cabal  package.yaml
BeginningHaskell/chapter2/app/: Main.hs
Books/BeginningHaskell/: BeginningHaskell.cabal  CHANGELOG.md
Books/BeginningHaskell/chapter2/: chapter2.cabal
Books/BeginningHaskell/chapter2/src/Chapter2/: DataTypes.hs  SimpleFunctions.hs
Books/BeginningHaskell/chapter2/src/Chapter2/Section2/: Example.hs
Books/BeginningHaskell/src/chapter2/: SimpleFunctions.hs
Books/BeginningHaskell/src/chapter2/section2/: DataTypes.hs  Example.hs
Books/EssentialProgrammingLanguages/Chapter01/: 01examples.hs
Books/HappyLearnHaskell/Chapter02/: ex01.hs
Books/HappyLearnHaskell/Chapter03/: ex01.hs
Books/RealWorldHaskell/ch01/: WC.hs
Books/SchoolOfMusic/: exercises.typ
Books/The little typer/: typer.tex  typer.typ
Books/Thinking Functionally/: References.txt  chapter01.tex
Books/Thinking Functionally/ex01G/: CHANGELOG.md  README.md  ex01G.cabal  package.yaml
Books/Thinking Functionally/ex02C/: CHANGELOG.md  README.md  ex02C.cabal  package.yaml  stack.yaml
Books/Thinking Functionally/ex02F/: CHANGELOG.md  README.md  ex02F.cabal  package.yaml
Books/Thinking Functionally/ex02G/: CHANGELOG.md  LICENSE  README.md  ex02G.cabal  package.yaml
Books/Thinking Functionally/ex02H/: CHANGELOG.md  README.md  ex02H.cabal  package.yaml
Books/Thinking Functionally/ex02I/: README.md  (+3 more)
Logic/test/: Spec.hs
Projects/Logic/: ChangeLog.md  LICENSE  Logic.cabal  package.yaml
RealWorldHaskell/ch02/: myDrop.hs
(+67 files in other folders)
